--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,43 @@
     padding: 0;
 }
 
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: black;
+}
+
 .container {
     display: flex;
-    width: 70vw;
+    max-width: 75vw;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 15px auto;
+}
+
+.hidden {
+    display: none;
+}
+
+.warm-colors,
+.cool-colors,
+.neutral-colors {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+
+.category-title {
+    margin: 10px;
+    font-weight: bold;
+    font-size: 1.5rem;
+    flex: 1;
+    color: white;
+}
+
+.cool-colors .card {
+    color: white;
 }
 
 .card {
@@ -15,35 +49,109 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
-    color: white;
     border-radius: 50px;
-    flex: 0.5;
+    flex: 1;
     margin: 10px;
     padding: 20px;
-    height: 70vh;
+    height: 25vh;
+    gap: 7px;
 }
 
-.card:nth-child(1) {
-    background-color: blue;
+.card h2 {
+    margin: 0 0 7px 0px;
 }
 
-.card:nth-child(2) {
-    background-color: red;
+.card p {
+    text-align: left;
+    justify-content: flex-start;
 }
 
-.card:nth-child(3) {
-    background-color: gray;
+/* Warm Colors */
+.warm-colors .card:nth-child(2) {
+    background-color: #ff6b00;
 }
 
-.card:nth-child(4) {
-    background-color: orange;
+.warm-colors .card:nth-child(3) {
+    background-color: #ffc700;
 }
 
-.card:nth-child(5) {
-    background-color: purple;
+.warm-colors .card:nth-child(4) {
+    background-color: #95d600;
 }
+
+/* Cool Colors */
+.cool-colors .card:nth-child(2) {
+    background-color: #00c1de;
+}
+
+.cool-colors .card:nth-child(3) {
+    background-color: #0091bd;
+}
+
+.cool-colors .card:nth-child(4) {
+    background-color: #002b49;
+}
+
+/* Neutral Colors */
+.neutral-colors .card:nth-child(2) {
+    background-color: #e5eceb;
+}
+
+.neutral-colors .card:nth-child(3) {
+    background-color: #7d868c;
+}
+
+.neutral-colors .card:nth-child(4) {
+    background-color: #333e48;
+}
+
 
 .card.active {
     flex: 3;
-    transition: 1s;
+    border: 2px solid rgb(224, 192, 7);
+    box-shadow: rgba(228, 206, 8, 0.3) 0px 19px 38px, rgba(212, 192, 8, 0.22) 0px 15px 12px;
+    transition: ease-in 0.4s;
+}
+
+.btn {
+    outline: none;
+    padding: 10px;
+    margin-top: 5px;
+    font-weight: bold;
+    border: 2px solid black;
+    border-radius: 12px;
+}
+
+.btn:hover {
+    cursor: pointer;
+    filter: invert();
+    transition: 0.4s;
+}
+
+footer {
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+
+@media screen and (max-width: 1000px) {
+    h2 {
+        font-size: 1.25rem;
+    }
+    p {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .warm-colors,
+    .cool-colors,
+    .neutral-colors {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin: 20px 0;
+    }
 }
