--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,14 @@ body {
     background-color: black;
 }
 
-.container {
+.first-row {
     display: flex;
-    max-width: 75vw;
+    margin-top: 80px;
+}
+
+.container,
+.container-two {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -31,11 +36,24 @@ body {
     margin-bottom: 20px;
 }
 
+.second-row {
+    display: flex;
+}
+
+.cool-colors {
+    display: flex;
+    text-align: center;
+    flex-direction: row;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+}
+
 .category-title {
     margin: 10px;
     font-weight: bold;
     font-size: 1.5rem;
-    flex: 1;
+    flex: 1 1 100%;
     color: white;
 }
 
@@ -53,17 +71,19 @@ body {
     flex: 1;
     margin: 10px;
     padding: 20px;
-    height: 25vh;
+    height: 250px;
     gap: 7px;
 }
 
 .card h2 {
     margin: 0 0 7px 0px;
+    font-size: 1.25rem;
 }
 
 .card p {
     text-align: left;
     justify-content: flex-start;
+    font-size: 1rem;
 }
 
 /* Warm Colors */
@@ -105,7 +125,6 @@ body {
     background-color: #333e48;
 }
 
-
 .card.active {
     flex: 3;
     border: 2px solid rgb(224, 192, 7);
@@ -130,28 +149,28 @@ body {
 
 footer {
     color: white;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-
-
-@media screen and (max-width: 1000px) {
-    h2 {
-        font-size: 1.25rem;
-    }
-    p {
-        font-size: 1rem;
-    }
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
 }
 
 @media screen and (max-width: 820px) {
-    .warm-colors,
-    .cool-colors,
-    .neutral-colors {
-        display: flex;
+    .container,
+    .container-two {
+        display: block;
         flex-direction: column;
         flex-wrap: wrap;
         margin: 20px 0;
+    }
+
+    .cool-colors {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
 }
